@@ -40,6 +40,7 @@ global.DATA = new F.TQueryBuilder.Controller(true);
 global.DB = () => new F.TQueryBuilder.Controller();
 global.CACHE = F.cache;
 global.NEWACTION = F.TBuilders.newaction;
+global.NEWCOMPONENT = F.newcomponent;
 global.NEWSCHEMA = F.TBuilders.newschema;
 global.ACTION = global.EXEC = F.TBuilders.action;
 global.TEMPLATE = F.template;
