@@ -11,6 +11,8 @@
 - added `CONF.mail_from_name {String}` option
 - improved `$.query` parser
 - improved `Total.run()` method
+- added a new method `NEWCOMPONENT(html, [callback])`
+	- it compiles FlowStream component to a method
 
 ========================
 0.0.6
